Fix text spacing, add border to title, delay main loop for proper displaying of HTML

--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@ body {
     font-family: monospace;
     text-align: center;
 }
+.title {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+}
